<resources>
    <string name="app_name">مزاد</string>
    <string name="login">تسجيل الدخول</string>
    <string name="register">التسجيل</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="forgot_password">نسيت كلمة المرور ؟</string>
    <string name="email_address">البريد الالكتروني</string>
    <string name="mobile">رقم الجوال</string>
    <string name="accept_terms">عند اشتراكك فأنت توافق علي الشروط والاحكام</string>
    <string name="specialized_search">بحث مخصص</string>
    <string name="advertise_here">أعلن هنا</string>
    <string name="favorite">المفضلة</string>
    <string name="call_us">اتصل بنا</string>
    <string name="terms">عمولة وأنظمة مزاد</string>
    <string name="my_ads">اعلاناتي</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="tools">ادوات</string>
    <string name="navigation_drawer_open">مفتوح</string>
    <string name="navigation_drawer_close">مغلف</string>
    <string name="content_description">content</string>
    <string name="home">الرئيسيه</string>
    <string name="search">بحث</string>
    <string name="message">الرسائل</string>
    <string name="settings">الاعدادات</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
