<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            app:actionLayout="@layout/nav_drawer_arrow"
            android:icon="@drawable/ic_search"
            android:title="@string/specialized_search" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_advertise_here"
            app:actionLayout="@layout/nav_drawer_arrow"
            android:icon="@drawable/ic_advertise_here"
            android:title="@string/advertise_here" />
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            app:actionLayout="@layout/nav_drawer_arrow"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
    </group>
    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call_us"
            app:actionLayout="@layout/nav_drawer_arrow"
            android:icon="@drawable/ic_call"
            android:title="@string/call_us" />
    </group>
    <group
        android:id="@+id/group5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_terms"
            app:actionLayout="@layout/nav_drawer_arrow"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms" />
    </group>
    <group
        android:id="@+id/group6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_ads"
            app:actionLayout="@layout/nav_drawer_arrow"
            android:icon="@drawable/ic_my_ads"
            android:title="@string/my_ads" />
    </group>
    <group
        android:id="@+id/group7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
    <group
        android:id="@+id/group8"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
    </group>

</menu>