<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:ignore="UnusedAttribute">

    <ProgressBar
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                tools:ignore="HardcodedText,RtlHardcoded,MissingPrefix"
                fontPath="fonts/ArbFONTS-DroidArabicKufi.ttf"
                android:textColor="#45BBD9"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:contentDescription="@string/content_description"
                android:adjustViewBounds="true"
                android:layout_gravity="right"
                tools:ignore="RtlHardcoded"
                android:id="@+id/back"
                android:src="@drawable/im_back_icon"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/app_bar"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="70dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:id="@+id/user_name"
                android:textSize="12sp"
                android:drawableRight="@drawable/ic_user"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                tools:ignore="HardcodedText,RtlHardcoded,MissingPrefix"
                fontPath="fonts/ArbFONTS-DroidArabicKufi.ttf" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawablePadding="20dp"
                android:id="@+id/email"
                android:textSize="12sp"
                android:drawableRight="@drawable/ic_email_nav"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                tools:ignore="HardcodedText,RtlHardcoded,MissingPrefix"
                fontPath="fonts/ArbFONTS-DroidArabicKufi.ttf" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawablePadding="20dp"
                android:id="@+id/password"
                android:textSize="12sp"
                android:drawableRight="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="HardcodedText,RtlHardcoded,MissingPrefix"
                fontPath="fonts/ArbFONTS-DroidArabicKufi.ttf" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/ic_phone"
                android:hint="@string/mobile"
                android:textSize="12sp"
                android:inputType="phone"
                android:id="@+id/mobile_number"
                tools:ignore="HardcodedText,RtlHardcoded,MissingPrefix"
                fontPath="fonts/ArbFONTS-DroidArabicKufi.ttf" />

            <Button
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:id="@+id/register_button"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:textSize="11sp"
                android:background="@drawable/bg_button_background"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/register"
                tools:ignore="HardcodedText,RtlHardcoded,MissingPrefix"
                fontPath="fonts/ArbFONTS-DroidArabicKufi.ttf"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/terms"
                tools:ignore="HardcodedText,RtlHardcoded,MissingPrefix"
                fontPath="fonts/ArbFONTS-DroidArabicKufi.ttf"
                android:text="@string/accept_terms"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>